[task] Astra